final update on phase end project

--- a/Phase 1/4. Phase End Project Simply Blogging/index.html
+++ b/Phase 1/4. Phase End Project Simply Blogging/index.html
@@ -1,127 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <style>
-      .container {
-        border: 10px solid rgb(53, 10, 243);
-      }
-      .nav-bar {
-        width: 100%;
-        max-width: 100%;
-        text-align: center;
-        margin: 0 auto;
-        margin-bottom: 6em;
-      }
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simply Blogging</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+</head>
+<body style="background-color:rgb(146, 128, 245)">
 
-      #btn {
-        background-color: blueviolet;
-        color: white;
-        padding: 7px;
-        border-radius: 5px;
 
-      }
+  <div class="navbar-expand-lg navbar-light bg-light" id="navbarResponsive" style="background-color: rgb(29, 101, 129);">
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+        <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Add Blog</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">Contacts</a>
+        </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">About Us</a>
+        </li>
+    </ul>
+      </div>
 
-      .nav-bar li,
-      a {
-        list-style: none;
-        display: inline;
-        text-align: center;
-        border: 0;
-        padding: 15px;
-        text-decoration: none;
-      }
 
-      h2 {
-        text-align: center;
-      }
-      .form-group {
-        padding: 20px;
-      }
-      .form-group div {
-        padding-bottom: 10px;
-      }
-      .grid-container {
-        width: 65em;
-        display: grid;
-        grid-template-columns: auto auto auto;
-        padding: 20px;
-        grid-column-gap: 100px;
-        /* border: 10px solid #6f289e; */
-      }
-      .grid-item {
-        padding: 20px;
-        width: 100%;
-        text-align: center;
-        border: 5px solid #000;
-      }
-    </style>
-  </head>
-  <body>
-    <h2>Simply Blogging</h2>
-    <div class="nav-bar">
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Add Blog</a></li>
-        <li><a href="">Contacts</a></li>
-        <li><a href="">About Us</a></li>
-      </ul>
-    </div>
+    <hr>
+    <h2 align="center">Simply Blogging</h2>
+    <p align="center">Speak your mind and be creative...</p>
+    Title:<br><input style="padding: 10px;
+  border: 1px solid rgb(193, 197, 196);" type="text" id="title"/><br><br>
+    Article:<br><textarea style="padding: 10px;
+  border: 1px solid rgb(193, 197, 196);" type="text" id="desc">
+    </textarea><br><br>
+    <input type="file" id="imageId" style="margin-left: 10px;"/><br><br>
+    <input type="button" style="height:38px; width: 100px; margin-left: 10px; border-radius:5px; background-color: blueviolet; color: white;" value="Submit Blog" onclick="submitBlog()"/> <br><br>
+    <hr/>
 
-    <!-- <div class="form-group">
-        <div class="row">
-          <div class="col-2"><label>Title</label></div>
-          <div class="col-3"><input type="text" name="user" id="title" class="form-control" placeholder="Enter article title here.."/></div> <br>
+    <div id="blogCont"></div>
+
+<!-- Going back to top and previous blogs-->
+        <div class="clearfix">
+          <a class="btn btn-primary float-right" href="#">Back to Top →</a>
         </div>
-        <div class="row">
-          <div class="col-2"><label>Article</label></div>
-          <div class="col-3"><textarea id="article" name="article" id="article" placeholder="Enter article here.." rows="6" cols="30"class="form-control"></textarea></div>
-        </div> <br>
-        <div class="row">
-        <div class="col-2"><label>Image</label></div>
-        <div class="col-3"><input type="text" name="user" id="image" class="form-control" placeholder="Enter image URL here.."/></div><br>
-        </div>
-        <div class="row">
-          <div class="col-2"><input type="submit" value="Add Blog" onclick="addData()" class="btn btn-success"  /></div>
-          <div class="col-2"><input type="reset" value="Reset" class="btn btn-info" /></div>
-        </div>
-      </form>
+      </div>
     </div>
-    </form>
-    <br>
-    <br> -->
+  </div>
 
-    <div>
-      Title:
-      <input type="text" id="title" placeholder="Enter title here..."/><br />
-      Article:<br />
-      <textarea
-        id="article"
-        name="article"
-        placeholder="Enter article here.."
-        rows="6"
-        cols="30"
-      ></textarea
-      ><br /><br />
-      Image: <input type="text" id="image" placeholder="Enter image URL here..." /><br /><br>
-
-
-      <input id="btn" type="button" value="Add Blog" onclick="addData()" />
-      <hr />
-    </div>
-    <div id="grid-container">
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-      <div class="grid-item"></div>
-    </div>
-    <script src="myfile.js"></script>
-
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>  -->
-  </body>
+</body>
 </html>
